<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    tools:context=".module.member.UserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@android:color/transparent">

            <ImageView
                android:id="@+id/parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5"/>

            <!-- 遮罩，后续考虑使用Palette -->
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:background="#64b4b4b4"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.9"
                android:padding="@dimen/spacing_16">

                <TextView
                    android:id="@+id/attention"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_8"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/action_attention"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/spacing_16"
                    android:layout_toLeftOf="@id/attention"
                    android:layout_toStartOf="@id/attention"
                    android:padding="@dimen/spacing_8"
                    android:text="@string/action_contact"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="@dimen/spacing_24"
                    android:textColor="@color/textColorBasic"/>

                <LinearLayout
                    android:id="@+id/action_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_name"
                    android:layout_marginTop="@dimen/spacing_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_attention"
                        android:textColor="@color/textColorSecondary"/>

                    <TextView
                        android:id="@+id/relationship_attention"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/spacing_3"
                        android:text="@string/zero_num"
                        android:textColor="@color/textColorSecondary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_16"
                        android:text="@string/hint_fans"
                        android:textColor="@color/textColorSecondary"/>

                    <TextView
                        android:id="@+id/relationship_fans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/spacing_3"
                        android:text="@string/zero_num"
                        android:textColor="@color/textColorSecondary"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/signature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/action_layout"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:text="@string/hint_signature_default"
                    android:minLines="1"
                    android:maxLines="2"
                    android:textColor="@color/textColorSecondary"/>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_48"
                android:background="@android:color/transparent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/homeAsUpIndicator">

                <RelativeLayout
                    android:id="@+id/button_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/title_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/textColorBasic"
                        android:textSize="@dimen/font_16"/>

                    <TextView
                        android:id="@+id/hint_all_feed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_name"
                        android:text="@string/hint_feed"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/font_12"/>

                    <TextView
                        android:id="@+id/feed_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/hint_all_feed"
                        android:layout_alignBottom="@+id/hint_all_feed"
                        android:paddingLeft="@dimen/spacing_4"
                        android:text="@string/zero_num"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/font_12"/>
                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>